# DeepPreconditioning

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  assets  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
assets/: .gitignore
assets/data/raw/: .gitignore  archive.zip.dvc  sludge_patterns.dvc
foam/newInterFoam/: pEqn.H
foam/newInterFoam/Make/: files  options
foam/sim/: .gitignore  Allrun
foam/sim/0/: U  alpha.water  alpha.water.org  epsilon  k  nut  p_rgh
foam/sim/constant/: transportProperties
foam/sim/system/: blockMeshDict  controlDict  decomposeParDict  fvSchemes  fvSolution  setFieldsDict  snappyHexMeshDict  snappyHexMeshDict.org
preconditioner/: config.py  data_loader.py  gen_data.py  loss.py  model.py  test.py  train.py  utils.py
preconditioner/data/: example_laplacian.npz
scripts/: compare_meshes.py
tests/: test_model.py  test_utils.py
uibk/deep_preconditioning/: cg.py  data_set.py  generate_data.py  metrics.py  model.py  test.py  train.py  utils.py
