[project]
name = "uibk.deep-preconditioning"
version = "0.1.0"
description = "Design preconditioners with a CNN to accelerate the conjugate gradient method."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Viktor Daropoulos", email = "Viktor.Daropoulos@student.uibk.ac.at" },
  { name = "Johannes Sappl", email = "johannes.sappl@student.uibk.ac.at" },
]
dependencies = [
  "dvc>=3.50.2",
  "dvclive>=3.46.0",
  "dvc-webdav>=3.0.0",
  "kaggle>=1.6.14",
  "matplotlib>=3.9.2",
  "pyamg>=5.2.1",
  "scipy>=1.14.1",
  "spconv-cu124>=2.3.8",
  "torch>=2.3.0",
]

[project.urls]
Repository = "https://github.com/jsappl/DeepPreconditioning"

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
exclude = ["__init__.py"]
fix = true
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "D",   # pydocstyle
  "E",   # pycodestyle Error
  "ERA", # eradicate
  "F",   # Pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "NPY", # NumPy-specific rules
  "PD",  # pandas-vet
  "PT",  # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "Q",   # flake8-quotes
  "RET", # flake8-return
  "TD",  # flake8-todos
  "W",   # pycodestyle Warning
]

[tool.ruff.lint.pydocstyle]
convention = "google"
